<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@android:color/background_light"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todoAddTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/todoAddMicIV"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todoAddTIE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/todo"
                android:inputType="textCapWords"
                android:minWidth="320dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/todoAddMicIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_mic"
            app:layout_constraintBottom_toBottomOf="@+id/todoAddTIL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintTop_toTopOf="@+id/todoAddTIL" />

        <Switch
            android:id="@+id/todoAddSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/alarm"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todoAddTIL" />

        <TimePicker
            android:id="@+id/todoAddTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:timePickerMode="spinner"
            app:layout_constraintBottom_toTopOf="@id/todoAddDatePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todoAddSwitch" />

        <DatePicker
            android:id="@+id/todoAddDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:visibility="gone"
            android:minDate="04/15/2020"
            android:spinnersShown="true"
            app:layout_constraintBottom_toTopOf="@id/todoAddCancelBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/todoAddOKBtn"
            style="@style/Theme.MaterialComponents.Light.Dialog.Alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/o_k"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/todoAddCancelBtn"
            style="@style/Theme.MaterialComponents.Light.Dialog.Alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/todoAddOKBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>